ecmascript/parser/tests/test262-error-references/fail/b94007220f24ebe5.js.stderr
error: Trailing comma is not allowed
 --> $DIR/tests/test262-parser/fail/b94007220f24ebe5.js:1:19
  |
1 | const x = 0, y = 1,;
  |                   ^

